--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,6 +9,13 @@ on:
 jobs:
 
   build:
+
+    strategy:
+      matrix:
+        go:
+          - "1.19"
+          - "1.20"
+
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -16,7 +23,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.15
+        go-version: ${{ matrix.go }}
 
     - name: Build
       run: go build -v ./...
